# pnp-open-source-program

./: .gitignore  Anchor.toml  LICENSE  PERMISSIONLESS_PREDICTION_MARKETS.md  README.md  package.json  tsconfig.json
explanations/: 01_choice_privacy.md  02_identity_privacy.md  03_price_privacy.md  04_payout_confidentiality.md  04_wealth_privacy.md  05_selective_compliance.md  06_technical_scaling.md  07_traceability.md  08_economic_logic.md
programs/prediction_market/: Cargo.toml
programs/prediction_market/src/: lib.rs
programs/prediction_market/src/amm/: bonding_curve.rs  mod.rs
programs/prediction_market/src/instructions/: create_market.rs  initialize.rs  mod.rs  redeem.rs  trade.rs
programs/prediction_market/src/instructions/market/: create_market.rs  initialize.rs  mod.rs  resolve.rs
programs/prediction_market/src/instructions/privacy/: compressed_accounts.rs  confidential_execution.rs  mod.rs  privacy_entry.rs  privacy_exit.rs  private_odds.rs  shielded_trading.rs
programs/prediction_market/src/instructions/public/: mod.rs  standard_amm.rs
programs/prediction_market/src/state/: config.rs  market.rs  mod.rs
tests/: privacy_darkpool.ts  test-admin.json
tests/keys/: oracle.json  relayer.json  traderA.json  traderB.json
