[package]
name = "prediction_market"
version = "0.1.0"
description = "Open-source permissionless prediction markets on Solana"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/permissionless-prediction-markets"

[lib]
crate-type = ["cdylib", "lib"]
name = "prediction_market"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30"
anchor-spl = { version = "0.30", features = ["metadata"] }

[dev-dependencies]
solana-program-test = "1.18"
solana-sdk = "1.18"
